# cork

./: CMakeLists.txt  CorkConfig.cmake.in
cmake/: FindGMP.cmake
src/: cork.cpp  cork.h  export.h
src/file_formats/: files.h
src/isct/: triangle.c  triangle.h
src/math/: vec.h
src/mesh/: mesh.bool.tpp  mesh.decl.h  mesh.isct.tpp
src/util/: prelude.h
